# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2011  Vasco Nunes, Piotr Ożarowski


2011-08-23  Michael Jahn
	* added buttons to remove and add a poster within the movie edit dialog
	* fixed bug in extension "remover", it doesn't work if a criteria is required
	  (f.e. adv filter with "required tag" did only remove the tags not the movie entries)

2011-08-20  Michael Jahn
	* updated KinoDe plugin
	* new icons for loading and removing posters (toolbar and menu are now the same icons)

2011-08-10  Michael Jahn
	* added new icons for the extensions (thanks to CinéphOli)

2011-07-18  Michael Jahn
	* configurable default value for field "seen it"
	* ability to switch the behaviour of the live search that it queries only after
	  enter is pressed (switchable via griffith.cfg only); good for bigger databases
	* [#811685] IMDB movie ratings not updating when adding new movie

2011-06-22  Filippo Valsorda
	* Fixed and completed PluginMovieMyMoviesIt (hidden bug)
	* Added gutils.rtrim (think at string.rfind)

2011-06-20  Filippo Valsorda
	* Refresh IMDB-it plugin

2011-06-20  Michael Jahn
	* [#570053] Region selection shows DVD regions when media is not DVD.
	  (added Bluray regions)

2011-06-17  Michael Jahn
	* [#725810] CSFD plugin is not working

2011-06-16  Michael Jahn
	* [#721033] Wrong behaviour

2011-06-13  Michael Jahn
	* [#789246] movies.studio field length too short in postgres
	  added a LengthValidator which truncates text fields

2011-06-01  Ivo Nunes
	* fixed crash when you try fetching a movie's information without internet connection

2011-05-23  Michael Jahn
	* updated MyMoviesIt plugin (full cast, screenplay, cameraman, director)
	* [#721036] Problem to add a movie

2011-05-18  Michael Jahn
	* updated CineMovies plugin (thanks to Olivier BOURSIN)
	* small fixes for Allocine and AllRovi plugin
	* added quick search for any field in the main window (thanks to Daniel Fetchinson)

2011-05-12  Michael Jahn